# tribute-donation

./: .env.example  .gitignore  README.md  biome.json  index.html  latest.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.auc_fighter_adapter.ts  vite.config.ts  vite.config.widget.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/auc-fighter/: auc-fighter-adapter.js
src-tauri/auc-fighter/css/: sfa.css
src-tauri/capabilities/: default.json
src-tauri/dist-widget/: widget.js
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: alert.rs  donation.rs  goal.rs  lib.rs  media_settings.rs  message.rs  service.rs  settings.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20250324_221133_create_table_settings.rs  m20250325_171158_create_table_alerts.rs  m20250325_185301_add_default_alert.rs  m20250325_185310_add_default_settings.rs  m20250405_190835_add_default_media_settings.rs  m20251104_230710_update_messages_colums.rs  m20251111_172605_create_table_services.rs  m20251111_183902_add_default_services.rs  m20251115_183022_update_settings.rs  m20251122_144811_rename_messages_table.rs  m20251212_124711_split_messages_and_donations.rs  m20251213_195846_add_alert_type.rs
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/commands/: add_custom_rewards.rs  cancel_auc_fighter_match.rs  check_password.rs  create_alert.rs  create_goal.rs  delete_alert_by_id.rs  finish_goal.rs  get_alert_by_id.rs  get_alerts.rs  get_auc_fighter_settings.rs  get_auction_settings.rs  get_donations.rs  get_goal_by_id.rs  get_goals.rs  get_maption_settings.rs  get_media_settings.rs  get_messages.rs  get_not_ended_goal.rs  get_service_by_id.rs  get_service_with_auth_by_id.rs  get_services.rs  get_settings.rs  get_token.rs  init.rs  is_authorized.rs  mod.rs  pause_auc_fighter_match.rs  pause_media.rs  play_media.rs  remove_custom_rewards.rs  replay_alert.rs  replay_media.rs  request_login_code.rs  resume_auc_fighter_match.rs  (+17 more)
(+248 files in other folders)
